# searchsorted

./: .gitignore  README.md
examples/: Cargo.toml
examples/examples/: eg1.py  eg1.rs  eg2.rs
python/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml
python/examples/: eg2.py
python/searchsorted/: __init__.py  _internal.cp310-win_amd64.pyd  functions.py
python/src/: lib.rs
searchsorted/: Cargo.toml
searchsorted/src/: lib.rs
