[package]
name = "searchsorted-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
searchsorted = {path="../searchsorted", version = "0.1.0"}
rand="0.8.5"

[[example]]
name = "eg1"
path = "examples/eg1.rs"
[[example]]
name = "eg2"
path = "examples/eg2.rs"